--- a/web/pages/GoalieTrends.module.scss
+++ b/web/pages/GoalieTrends.module.scss
@@ -1,7 +1,7 @@
 // Base container styles
 .container {
   max-width: 1200px;
-  width: 1000px;
+  width: 790px;
   margin: auto;
   padding: 20px;
   font-family: "Roboto Condensed", sans-serif;
@@ -155,4 +155,77 @@
       text-overflow: ellipsis;
     }
   }
+}
+
+.goalieShareTable {
+  border: #07aae2 1px solid;
+  background-color: #181818;
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.teamGroup {
+  border: #07aae2 1px solid;
+  padding: 0;
+}
+
+.teamGroupCell {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  height: 100%;
+  width: 100%;
+}
+
+.teamLogoChart {
+  height: 40px;
+  width: auto;
+  padding: 5px;
+  filter: drop-shadow(0 0 5px var(--secondary-color));
+}
+
+.teamHeaderChart {
+  width: 100%;
+  border-bottom: #07aae2 1px solid;
+  margin-bottom: 10px;
+  background: linear-gradient(
+    115deg,
+    var(--primary-color) 0%,
+    var(--primary-color) 22%,
+    var(--secondary-color) 22%,
+    var(--secondary-color) 25%,
+    var(--primary-color) 25%,
+    var(--primary-color) 28%,
+    var(--secondary-color) 28%,
+    var(--secondary-color) 31%,
+    var(--jersey-color) 31%,
+    var(--jersey-color) 34%,
+    var(--primary-color) 34%,
+    var(--primary-color) 100%
+  );
+}
+
+.logoAndAbbrev {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  gap: 10px;
+  padding: 0px 10px 0px 10px;
+}
+
+.goalieChart {
+  padding-bottom: 10px;
+  width: 250px;
+  margin: auto;
+}
+
+.teamNameChart {
+  color: var(--secondary-color);
+  font-family: montesserat, sans-serif;
+  font-size: 0.85em;
+  font-weight: 900;
+  text-transform: uppercase;
+  letter-spacing: -0.015em;
+  font-style: italic;
 }
