--- a/web/components/GameGrid/GameGrid.module.scss
+++ b/web/components/GameGrid/GameGrid.module.scss
@@ -2,8 +2,10 @@
 
 .actions {
   position: relative;
+  width: 80%;
+  margin: 0 auto;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   gap: 1rem;
   & button:hover {
@@ -15,6 +17,27 @@
     right: -80%;
     bottom: 2px;
   }
+}
+
+.gameGridTitle {
+  font-family: roboto condensed, sans-serif;
+  font-size: 3em;
+  font-weight: 200;
+  text-transform: uppercase;
+  letter-spacing: -0.015em;
+  margin: 0;
+}
+
+.prevNextButtons {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 1rem;
+  width: 50%;
+}
+
+.spanColorBlue {
+  color: #07aae2;
 }
 
 .dateButtonPrev {
@@ -54,7 +77,7 @@
 }
 
 .gridWrapper {
-  margin-top: 25px;
+  margin-top: 10px;
 }
 
 .scheduleGrid {
