--- a/web/pages/GoalieTrends.module.scss
+++ b/web/pages/GoalieTrends.module.scss
@@ -1,7 +1,7 @@
 // Base container styles
 .container {
   max-width: 1200px;
-  width: 790px;
+  width: 780px;
   margin: auto;
   padding: 20px;
   font-family: "Roboto Condensed", sans-serif;
@@ -47,27 +47,6 @@
   }
 }
 
-// Styles for the goalie trends table
-.goalieTrendsTable {
-  width: 100%;
-  border-collapse: collapse;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  margin-top: 20px;
-  border: #404040 1px solid;
-  outline: 10px solid #181818;
-
-  th,
-  td {
-    text-align: left;
-    padding: 10px;
-    border-bottom: 1px solid #f0f0f0;
-  }
-
-  th {
-    background-color: #101010;
-    color: white;
-  }
-}
 .teamLogo {
   height: 40px;
   width: auto;
@@ -108,57 +87,10 @@
   font-size: 0.8em;
 }
 
-// Styles for the individual goalie stats container
-.goalieStatsContainer {
-  display: flex;
-  flex-direction: row;
-  gap: 15px;
-  width: 100%;
-  align-items: flex-start;
-
-  .goalieStats {
-    display: flex;
-    flex-direction: row;
-    gap: 5px;
-    border-bottom: #07aae2 1px solid;
-    border-right: #07aae2 1px solid;
-    padding: 5px;
-  }
-}
-
-// Styles for the comparison bar container
-.comparisonBarContainer {
-  grid-column: 1 / -1; // Stretch across all columns
-  margin-top: 10px; // Space between stats and comparison bar
-  display: flex;
-  height: 30px;
-  width: 100%;
-  overflow: hidden;
-  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
-
-  .barSegment {
-    flex-grow: 0;
-    flex-shrink: 0;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    overflow: hidden;
-    border-right: #f0f0f0 1px solid;
-
-    .goalieName {
-      font-weight: 900;
-      padding: 0 5px;
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
-    }
-  }
-}
-
 .goalieShareTable {
-  border: #07aae2 1px solid;
+  border: #07aae2 2px solid;
+  border-radius: 4px;
+  outline: #181818 10px solid;
   background-color: #181818;
   width: 100%;
   border-collapse: collapse;
@@ -181,6 +113,7 @@
   height: 40px;
   width: auto;
   padding: 5px;
+  margin-left: -15px;
   filter: drop-shadow(0 0 5px var(--secondary-color));
 }
 
@@ -216,16 +149,82 @@
 
 .goalieChart {
   padding-bottom: 10px;
-  width: 250px;
+  width: 240px;
   margin: auto;
 }
 
 .teamNameChart {
   color: var(--secondary-color);
   font-family: montesserat, sans-serif;
-  font-size: 0.85em;
+  font-size: 0.75em;
+  font-weight: 900;
+  text-transform: uppercase;
+  letter-spacing: -0.075em;
+  font-style: italic;
+  margin-left: 15px;
+}
+
+.teamGPStatsLabel,
+.teamGoalieStatsValue {
+  color: var(--secondary-color);
+  font-family: montesserat, sans-serif;
+  font-size: 0.75em;
   font-weight: 900;
   text-transform: uppercase;
   letter-spacing: -0.015em;
   font-style: italic;
+}
+
+// Toggle
+
+.toggleSwitch {
+  margin: 0;
+}
+
+.toggleSwitch label {
+  cursor: pointer;
+}
+
+.toggleSwitch input[type="checkbox"] {
+  position: relative;
+  width: 40px;
+  height: 20px;
+  -webkit-appearance: none;
+  background: #c6c6c6;
+  outline: none;
+  border-radius: 20px;
+  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
+  transition: 0.5s;
+}
+
+.toggleSwitch input:checked[type="checkbox"] {
+  background: #03a9f4;
+}
+
+.toggleSwitch input[type="checkbox"]::before {
+  content: "";
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  border-radius: 20px;
+  top: 0;
+  left: 0;
+  background: #fff;
+  transform: scale(1.1);
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  transition: 0.5s;
+}
+
+.toggleSwitch input:checked[type="checkbox"]::before {
+  left: 20px;
+}
+
+// Single Chart
+
+.newChart {
+  color: white; // Choose your color
+  background-color: black; // Choose your background
+  text-align: center;
+  padding: 20px;
+  border-radius: 4px;
 }
