added pages and component files

--- a/web/components/LinemateMatrix/index.module.scss
+++ b/web/components/LinemateMatrix/index.module.scss
@@ -25,12 +25,28 @@
     font-size: 0.75rem;
   }
 
+  // #__next > div > div.ShiftChart_shiftChartContainer__CgnMf > div:nth-child(3) > div > div.LinemateMatrix_gridWrapper__d0Bm9 > section:nth-child(2) > h4
+
+  h4 {
+    font-family: montesserat, sans-serif;
+    font-size: 1.5rem;
+    padding: 0;
+
+    font-weight: 900;
+    text-transform: uppercase;
+    letter-spacing: -0.075em;
+    font-style: italic;
+  }
+
   .grid {
-    background-color: white;
-    color: black;
+    background-color: #202020;
+    color: #fff;
     display: grid;
-    width: 100%;
+    width: 90%;
     aspect-ratio: 1 / 1;
+    padding: var(--spacing);
+    border: 2px solid #07aae2;
+    border-radius: 10px;
 
     .topPlayerName {
       position: relative;
@@ -65,7 +81,8 @@
     }
 
     .cell {
-      border: 1px solid #fff;
+      border: 1px solid #585858;
+      background: #e0e0e0;
 
       &:hover {
         border-color: darkorange;
