--- a/web/components/LineCombinations/PlayerCard/PlayerCard.module.scss
+++ b/web/components/LineCombinations/PlayerCard/PlayerCard.module.scss
@@ -56,6 +56,19 @@
         font-weight: 900;
         letter-spacing: -0.05em;
         text-shadow: 0px 4px 4px #00000040;
+        text-wrap: nowrap;
+      }
+    }
+  }
+}
+
+.goalie {
+  @media only screen and (max-width: $screen-small-max) {
+    .stats {
+      .stat {
+        .value {
+          font-size: 0.625rem;
+        }
       }
     }
   }
