--- a/web/pages/sustainabilityTool.module.scss
+++ b/web/pages/sustainabilityTool.module.scss
@@ -1,23 +1,289 @@
-.susContainer {
+.spanColorBlue {
+  color: #07aae2;
+}
+
+.headerWigo {
+  font-family: roboto condensed, sans-serif;
+  font-size: 3em;
+  font-weight: 200;
+  letter-spacing: -0.015em;
+  margin: 0;
+}
+
+.wigoHeader {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 83%;
+  margin: 0 auto;
+  margin-top: 20px;
+}
+
+/* WiGO CHART CONTAINER */
+
+.wigoChartBorder {
+  height: 100vh; /* 90% of the viewport height */
+  width: 85%;
+  margin: 0 auto;
+  padding: 10px;
+  background-color: #afcee2;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.wigoContainer {
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  grid-template-rows: repeat(5, 1fr);
-  grid-column-gap: 0px;
-  grid-row-gap: 0px;
+  grid-template-columns: repeat(21, 1fr);
+  grid-template-rows: repeat(20, 1fr);
+  border: 1px solid #afcee2;
+  gap: 1px;
+  width: 97%; /* Take up all available width */
+  height: 97%; /* Take up all available height */
+  box-shadow: 0 10px 30px #123048; /* Horizontal offset, vertical offset, blur radius, and color */
+  z-index: 2; /* Ensure this is lower than the popupContainer if necessary */
+}
+
+.wigoDoughnut {
+  grid-area: 1 / 1 / 10 / 8;
+  z-index: 3;
+
+  .wigoDoughnutHeader {
+    height: 15%;
+    background-color: #38abfe;
+    border-bottom: 1px solid #aac9dd;
+  }
+
+  .wigoDoughnutChart {
+    height: 70%;
+    border-bottom: 1px solid #aac9dd;
+    background: linear-gradient(to bottom left, #34a6fe, #126fcc);
+  }
+
+  .wigoDoughnutLegend {
+    height: 15%;
+    background-color: #1c77d2;
+  }
 }
 
 .bioHeadshot {
-  grid-area: 1 / 1 / 3 / 3;
-  border: 2px solid black;
-  height: 100%;
+  grid-area: 1 / 8 / 10 / 15;
+  position: relative;
+  z-index: 1;
+  overflow: hidden;
+
+  .bioHeadshotHeader {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
+    height: 15%;
+    padding: 10px;
+    text-transform: uppercase;
+    font-size: 1.5em;
+    font-family: roboto condensed, sans-serif;
+    background-color: #223d4e;
+    border-bottom: 1px solid #aac9dd;
+    z-index: 1;
+    position: relative; /* Ensure z-index is applied correctly */
+    overflow: visible;
+  }
+
+  .bioHeadshotContent {
+    height: 85%;
+    background: linear-gradient(to bottom left, #274253, #14252d);
+    position: relative;
+    z-index: 3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    /* Add a pseudo-element for the circle */
+    &::before {
+      content: "";
+      position: absolute;
+      width: 14em; /* Adjust the size as needed */
+      height: 14em; /* Adjust the size as needed */
+      background-color: var(
+        --primary-color
+      ); /* Background color of the circle */
+      border: 5px solid var(--secondary-color); /* Border color and size */
+      border-radius: 50%;
+      z-index: 1;
+    }
+
+    .wigoHeadshotImage {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      height: auto; /* Adjust this as needed to control the canvas size */
+      width: 100%;
+      display: flex;
+      transform: translateY(17%);
+      justify-content: center; /* Center horizontally */
+      align-items: flex-end; /* Align to the bottom */
+      z-index: 2;
+      overflow: visible; /* Allows the canvas to overflow into the header */
+      filter: grayscale(85%) sepia(0.5) hue-rotate(180deg) brightness(60%)
+        drop-shadow(0 0 10px #aac9dd); /* Apply a filter to the image */
+    }
+  }
 }
-.susCells {
-  grid-area: 1 / 3 / 3 / 6;
-  border: 2px solid black;
-  height: 100%;
+
+.wigoLineChart {
+  grid-area: 1 / 15 / 10 / 22;
+  background: linear-gradient(to bottom left, #274253, #14252d);
+  z-index: 3;
+
+  .wigoLineChartHeader {
+    height: 15%;
+    background-color: #223d4e;
+    border-bottom: 1px solid #aac9dd;
+  }
+
+  .wigoLineChartContent {
+    height: 85%;
+    background-color: #ebfaff;
+  }
 }
-.susCharts {
-  grid-area: 3 / 1 / 6 / 6;
-  border: 2px solid black;
-  height: 100%;
+
+.wigoStatList {
+  grid-area: 10 / 1 / 14 / 8;
+  background-color: #1b2c36;
+}
+
+.wigoSusCells {
+  grid-area: 10 / 8 / 14 / 15;
+  background-color: #1b2c36;
+}
+
+.wigoRollingAverage {
+  grid-area: 10 / 15 / 14 / 22;
+  background-color: #1b2c36;
+}
+
+.wigoLinesDoughnuts {
+  grid-area: 14 / 1 / 21 / 8;
+  background: linear-gradient(to bottom, #e3f3ff, #c2dae6);
+
+  .wigoLinesDoughnutsTop {
+    height: 50%;
+    border-bottom: 1px solid #07aae2;
+    display: flex;
+    flex-direction: row;
+
+    .wigoLinesTop {
+      width: 66%;
+      border-right: 1px solid #07aae2;
+    }
+
+    .wigoDoughnutsTop {
+      width: 33%;
+    }
+  }
+
+  .wigoLinesDoughnutsBottom {
+    height: 50%;
+    display: flex;
+    flex-direction: row;
+
+    .wigoLinesBottom {
+      width: 66%;
+      border-right: 1px solid #07aae2;
+    }
+
+    .wigoDoughnutsBottom {
+      width: 33%;
+    }
+  }
+}
+
+.wigoPercentileLines {
+  grid-area: 14 / 8 / 21 / 15;
+  background: linear-gradient(to bottom, #e3f3ff, #c2dae6);
+
+  .wigoPercentileLinesTop {
+    height: 50%;
+    border-bottom: 1px solid #07aae2;
+  }
+
+  .wigoPercentileLinesBottom {
+    height: 50%;
+  }
+}
+
+.wigoBars {
+  grid-area: 14 / 15 / 21 / 22;
+  background: linear-gradient(to bottom, #e3f3ff, #c2dae6);
+
+  .wigoBarsTop {
+    height: 50%;
+    border-bottom: 1px solid #07aae2;
+  }
+
+  .wigoBarsBottom {
+    height: 50%;
+  }
+}
+
+/* END WiGO CHART CONTAINER */
+
+.dropdownContainer {
+  position: relative;
+  display: inline-block;
+}
+
+.popupContainer {
+  position: absolute;
+  top: 100%; /* Position the popup right below the input field */
+  left: 0; /* Align the popup with the left edge of the dropdown container */
+  width: 250px;
+  max-height: 300px;
+  overflow-y: auto;
+  background-color: #202020;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  z-index: 3; /* Higher z-index to ensure it's on top of other elements */
+
+  /* Styles for the scrollbar */
+  &::-webkit-scrollbar {
+    width: 8px;
+  }
+  &::-webkit-scrollbar-track {
+    background-color: #101010;
+  }
+  &::-webkit-scrollbar-thumb {
+    background-color: #07aae2;
+    border-radius: 4px;
+  }
+  &::-webkit-scrollbar-thumb:hover {
+    background-color: #101010;
+  }
+}
+
+.searchInput {
+  width: 250px;
+  padding: 10px;
+  background-color: #202020;
+  border: 2px solid #07aae2;
+  border-radius: 4px;
+  color: #ccc;
+}
+
+.scrollableList {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.popupListItem {
+  padding: 8px 12px;
+  cursor: pointer;
+
+  &:hover {
+    background-color: #101010;
+  }
 }
