--- a/web/components/LinemateMatrix/index.module.scss
+++ b/web/components/LinemateMatrix/index.module.scss
@@ -82,7 +82,7 @@
 
     .cell {
       border: 1px solid #585858;
-      background: #e0e0e0;
+      background: #404040;
 
       &:hover {
         border-color: darkorange;
