--- a/web/pages/sustainabilityTool.module.scss
+++ b/web/pages/sustainabilityTool.module.scss
@@ -51,13 +51,88 @@
   z-index: 3;
 
   .wigoDoughnutChart {
-    height: 70%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    height: 75%;
     border-bottom: 1px solid #aac9dd;
     background: linear-gradient(to bottom left, #34a6fe, #126fcc);
   }
 
+  .wigoDoughnutLegendLeft {
+    width: 12.5%;
+    height: 100%;
+    font-family: roboto condensed, sans-serif;
+    font-size: 0.75em;
+    letter-spacing: -0.05em;
+    text-align: center;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+
+    .wigoDoughnutLegendLeftTitle {
+      background-color: #1c77d2;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border: 2px solid #aac9dd;
+    }
+
+    .wigoDoughnutLegendLeftValue {
+      border: 1px solid #aac9dd;
+      color: #e3f3ff;
+      font-weight: 400;
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+  }
+
+  .wigoDoughnutChartContent {
+    width: 75%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .wigoDoughnutLegendRight {
+    width: 12.5%;
+    height: 100%;
+    font-family: roboto condensed, sans-serif;
+    font-size: 0.75em;
+    letter-spacing: -0.05em;
+    text-align: center;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+
+    .wigoDoughnutLegendRightTitle {
+      height: 100%;
+      background-color: #1c77d2;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border: 2px solid #aac9dd;
+    }
+
+    .wigoDoughnutLegendRightValue {
+      border: 1px solid #aac9dd;
+      color: #e3f3ff;
+      font-weight: 400;
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+  }
+
   .wigoDoughnutLegend {
-    height: 5%;
+    height: 20%;
     background-color: #1c77d2;
     display: flex;
     flex-direction: column;
@@ -74,6 +149,7 @@
       letter-spacing: -0.015em;
 
       .wigoDoughnutDescriptor {
+        height: 40%;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -86,7 +162,7 @@
   }
 
   .wigoDoughnutHeader {
-    height: 17%;
+    height: 80%;
     background-color: #38abfe;
     display: flex;
     flex-direction: column; /* Stack the career and season sections vertically */
@@ -122,67 +198,9 @@
   }
 
   .wigoDoughnutFooter {
-    height: 8%;
+    height: 25%;
     background-color: #1c77d2;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
     border-top: 1px solid #aac9dd;
-
-    .timeOptionsCustom {
-      justify-content: center;
-      align-items: center;
-      width: 100%;
-      padding: 1px;
-      display: flex;
-      height: 100%;
-
-      button {
-        position: relative; /* Establish a positioning context for pseudo-elements */
-        border-radius: 6px;
-        font-size: 1rem;
-        line-height: 20px;
-        margin-right: 4px; /* Add right margin to create space between buttons */
-        margin-left: 2px;
-      }
-
-      & > button:not(:last-child)::after {
-        content: "";
-        position: absolute;
-        opacity: 1;
-        background: #aac9dd;
-        height: 26px;
-        width: 2px;
-        right: 0%;
-        top: 0px;
-        right: -4px; /* Adjust this value to control the space between the button and the border */
-      }
-      button {
-        &:hover {
-          cursor: pointer;
-        }
-        position: relative;
-        padding: 2px 8px;
-        border-radius: 6px;
-        font-family: "Roboto Condensed";
-        font-weight: 400;
-        font-size: 1rem;
-        line-height: 20px;
-        text-transform: uppercase;
-        white-space: nowrap;
-
-        text-align: center;
-        &.checked,
-        &:hover {
-          width: 90%;
-          background-color: #4ca5db;
-          color: white;
-          font-weight: 700;
-          width: 75%;
-        }
-      }
-    }
   }
 }
 
@@ -282,6 +300,27 @@
 .wigoRollingAverage {
   grid-area: 18 / 22 / 24 / 33;
   background-color: #1b2c36;
+  overflow-x: scroll; // Enable horizontal scrolling
+  overflow-y: hidden; // Prevent vertical scrolling
+}
+
+/* Target the scrollbar within .wigoRollingAverage specifically */
+.wigoRollingAverage::-webkit-scrollbar {
+  width: 8px; /* Width of the scrollbar */
+  height: 8px; /* Height of the scrollbar (for horizontal scroll) */
+}
+
+.wigoRollingAverage::-webkit-scrollbar-track {
+  background-color: #2e3b4e; /* Color of the track */
+}
+
+.wigoRollingAverage::-webkit-scrollbar-thumb {
+  background-color: #2b90ed; /* Color of the scrollbar thumb */
+  border-radius: 2px; /* Rounded corners of the scrollbar thumb */
+}
+
+.wigoRollingAverage::-webkit-scrollbar-thumb:hover {
+  background-color: #0590d8; /* Color of the scrollbar thumb on hover */
 }
 
 .wigoLinesDoughnuts {
@@ -405,4 +444,87 @@
   &:hover {
     background-color: #101010;
   }
+}
+
+/* gameScoreLineChart */
+.chartWrapper {
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+
+.chartWrapper > canvas {
+  position: absolute;
+  left: 0;
+  top: 0;
+  pointer-events: none;
+  height: 100%;
+}
+
+.chartAreaWrapper {
+  width: auto; // Allow it to grow as needed
+  height: 100%;
+  min-width: 1000px;
+  flex-grow: 1; // Allow the chart area to take up the remaining space
+}
+
+.yAxisLabel {
+  position: -webkit-sticky;
+  position: sticky;
+  left: 0;
+  background-color: #1b2c36;
+  border-right: 1px solid #aac9dd;
+  height: 100%;
+  display: flex;
+  flex-direction: row; // Stack children vertically
+  justify-content: center; // Center children vertically
+  align-items: center; // Center children horizontally
+  width: auto; // Let the width be determined by the content or set it explicitly
+  min-width: 10%; // Minimum width to ensure visibility of labels
+}
+
+.yAxisLabelTitle {
+  text-align: center;
+  white-space: nowrap;
+  writing-mode: vertical-rl;
+  transform: scale(-1);
+  font-size: 0.75em;
+}
+
+.yAxisLabelValues {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  height: 100%;
+  font-size: 0.75em;
+  font-weight: 900;
+  flex-grow: 1;
+  margin-right: 10%;
+}
+
+.chartContainer {
+  display: flex;
+  height: 100%;
+}
+
+.top,
+.middle,
+.bottom {
+  position: absolute;
+  text-align: right;
+  width: 100%;
+}
+
+.top {
+  top: 0%; /* Adjust this value to align with the chart's y-axis */
+}
+
+.middle {
+  top: 48%; /* Adjust this value to align with the chart's y-axis */
+  transform: translateY(-50%); /* Center align the element with its position */
+}
+
+.bottom {
+  bottom: 20%; /* Adjust this value to align with the chart's y-axis */
 }
