--- a/web/styles/ShiftChart.module.scss
+++ b/web/styles/ShiftChart.module.scss
@@ -84,6 +84,8 @@
 // Input and select elements within dropdowns
 .shiftChartDropdown select,
 .shiftChartDropdown input {
+  background-color: #020202;
+  color: antiquewhite;
   font-family: roboto condensed, sans-serif;
   padding: 5px;
   font-size: 16px;
@@ -92,13 +94,23 @@
   width: 150px; // Set a fixed width for consistency
 }
 
-.shiftChartTable {
+.shiftChartTableContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 98%;
+  overflow-x: auto; // Add horizontal scroll for smaller screens
+  border: #07aae2 3px solid;
+  border-radius: 10px;
+  padding: 5px;
+}
+
+.shiftChartTable {
+  margin-top: 35px;
+  width: 300%;
   border-collapse: collapse;
   color: white;
   background-color: #202020;
-  border: #07aae2 4px solid;
-  border-radius: 10px;
 }
 
 .shiftChartTable th,
@@ -162,15 +174,31 @@
 
 .timestampsBar {
   cursor: pointer;
-  background: linear-gradient(to right, #444 0%, #888 100%);
+  background: #444; // Default darker background
   position: relative;
+}
+
+.timestampsBar::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 0%; // Initial width
+  height: 100%;
+  background: #656565; // Brighter color
+  transition: width 0.3s ease;
+}
+
+.timestampsBar::before {
+  width: var(--bright-width, 0%);
 }
 
 .yellowLine {
   position: absolute;
-  background-color: yellow;
+  background-color: #e08e45;
   width: 2px;
   height: 100%; // This assumes the parent element spans the full chart height
+  transform: translateY(-50%);
   left: 0; // Initialize at 0, will be set dynamically
 }
 
